<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="66dp">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?colorPrimaryVariant"
    tools:context=".fragments.QuiltDetailsFragment">
    <TextView
        android:id="@+id/activity_info_header"
        android:layout_width="319dp"
        android:layout_height="44dp"
        android:layout_marginTop="20dp"
        android:text="@string/activity_information"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/quilt_details"
        app:layout_constraintStart_toStartOf="@+id/quilt_details"
        app:layout_constraintTop_toBottomOf="@+id/quilt_details" />


    <TextView
        android:id="@+id/quilt_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quilt_details"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.035" />

    <TextView
        android:id="@+id/general_info"
        android:layout_width="317dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:text="@string/user_manuals"
        android:textColor="#616161"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/general_info_header"
        app:layout_constraintStart_toStartOf="@+id/general_info_header"
        app:layout_constraintTop_toBottomOf="@+id/general_info_header" />

    <ListView
        android:id="@+id/activity_info_list"
        android:layout_width="319dp"
        android:layout_height="200dp"
        android:layout_marginTop="1dp"
        app:layout_constraintEnd_toEndOf="@+id/activity_info_header"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/activity_info_header"
        app:layout_constraintTop_toBottomOf="@+id/activity_info_header" />

    <TextView
        android:id="@+id/general_info_header"
        android:layout_width="319dp"
        android:layout_height="44dp"
        android:layout_marginTop="16dp"
        android:text="@string/general_information"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/activity_info_header"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/activity_info_header"
        app:layout_constraintTop_toBottomOf="@+id/activity_info_list"
        tools:ignore="UnknownId" />

</androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>